finishes initial implementation of ChatGPT

--- a/src/app/demos/codellama/config.json
+++ b/src/app/demos/codellama/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "code-llama",
+  "id": "codellama",
   "name": "Code Llama",
   "title": "Code Llama",
   "image": "/models/code-llama.png",
