--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
     "next": "13.5.4",
+    "openai": "^4.12.0",
     "react": "^18",
     "react-dom": "^18"
   },
